--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    background-color: yellow;
     justify-content: center;
     justify-items: center;
     height: 100vh;
@@ -23,5 +23,4 @@ button{
     cursor:pointer;
     padding: 5x;
     background-color: blue;
-
 }
